# tonic-xds-istio-interop

./: .gitignore  Cargo.toml  Dockerfile  README.md  run-test.sh  setup.sh  teardown.sh
k8s/: destination-rule.yaml  greeter.yaml  namespace.yaml  peer-authentication.yaml  tonic-xds-client.yaml
src/: greeter_server.rs  main.rs
